2008-03-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Installation/Simple/SimpleInstaller.cs:
    Fixed bug that downloaded file will be deleted even if
    it's no archive

2008-03-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * configure.ac:
    Post release bump to 0.3.1

========== Version 0.3.0 released 2008-03-16 ==========

2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

   * src/libcapuchin/AppObject.cs:
   Added GetApplicationName method

2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * examples/testapp.cs:
    * src/libcapuchin/AppObject.cs:
    GetAvailablePlugins returns just id and name for each plugin.
    GetAvailableUpdates just returns a list of plugin ids.
    Added GetDescription and GetChanges methods.

2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * examples/testapp.cs
    * src/libcapuchin/DownloadManager.cs
    * src/libcapuchin/AppObject.cs:
    Show download status when downloading repository's XML file
    Changed name of Refresh method to Update
    Changed name of Update method to Install
    Changed name of event Updated to InstallFinished
    Changed name of event InstallationStatus to Status and changed its parameters
    Added ActionType enum

2007-10-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * doc/repository.rng:
    * src/libcapuchin/Repository.cs:
    Added changelog element to XML schema

2007-10-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* examples/testapp.cs:
	* src/libcapuchin/Capuchin.cs:
	* src/libcapuchin/DownloadManager.cs:
	* src/libcapuchin/AppObject.cs:
	* src/libcapuchin/Downloaders/AbstractDownloader.cs:
	* src/libcapuchin/Downloaders/HttpDownlaoder.cs:
	* src/libcapuchin/Downloaders/FtpDownloader.cs:
	Renamed DownloadStatus signal to InstallationStatus.
	It contains plugin id, action, progress and speed.
	Implemented measurement of download speed for HTTP downloads.	
	
2007-10-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* src/capuchin/Main.cs: