@@ -1,5 +1,10 @@
 2008-03-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
+    * src/libcapuchin/AppObjectManager.cs:
+    Strip bad characters from object path    
+
+2008-03-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
     * src/libcapuchin/Installation/Simple/SimpleInstaller.cs:
     Fixed bug that downloaded file will be deleted even if
     it's no archive
